# rksolver

./: 4d_elems.md  README.md  main.py  pyproject.toml
src/: main.py
src/analyzing/: base.py  middle_indices.py  one_move.py
src/rubics_cube/: main.py  move.py  utils.py
src/rubics_cube/moves/: move_generator.py
src/rubics_cube/state/: __init__.py  orientations.py  permutations.py  state.py
