[project]
name = "rksolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "seaborn>=0.13.2",
    "types-seaborn>=0.13.2.20251221",
]
